Re-add static pages

--- a/index-fra.html
+++ b/index-fra.html
@@ -56,100 +56,48 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
-<!-- MainContentStart -->
-<h1 id="wb-cont">Page de contenu + menu secondaire 1 - Thème de la facilité d'emploi Web GC</h1>
-
-<section><h2>En-tête 2 (<code>h2</code>) - apparence par défaut</h2>
-	<section><h3>En-tête 3 (<code>h3</code>) - apparence par défaut</h3>
-		<section><h4>En-tête 4 (<code>h4</code>) - apparence par défaut</h4>
-			<section><h5>En-tête 5 (<code>h5</code>) - apparence par défaut</h5>
-				<section><h6>En-tête 6 (<code>h6</code>) - apparence par défaut</h6>
-					<p>Paragraphe - apparence par défaut</p>
-				</section>
-			</section>
-		</section>
-	</section>
-</section>	
-								
-<p><a href="#">Lien - apparence par défaut</a></p>
-<p><a href="mailto:"><code>mailto:</code> lien - apparence par défaut</a></p>
-<p><a href="http://www.">Tiers <code>http://www.</code> lien - apparence par défaut</a></p>
-<p><a href=".doc">Lien aux téléchargements des fichiers fondés sur le type de fichier <code>.doc</code>, <code>.psd</code>, <code>.zip</code>, <code>.pdf</code>, <code>.xls</code>, <code>.xlt</code>, <code>.rtf</code> et <code>.txt</code> - apparence par défaut</a></p>
-<p>Abréviation - apparence par défaut: <abbr title="Secrétariat du Conseil de Trésor">SCT</abbr>.</p>
-
-<ul>
-<li>liste à puces (<code>ul</code>) premier niveau - apparence par défaut
-	<ul>
-	<li>liste à puces (<code>ul</code>) deuxième niveau - apparence par défaut
-		<ul>
-		<li>liste à puces (<code>ul</code>) troisième niveau - apparence par défaut</li>
-		</ul>
-	</li>
-	</ul>
-</li>
-</ul>
-
-<ol>
-<li>liste ordonnée (<code>ol</code>) premier niveau - apparence par défaut</li>
-<li>liste ordonnée (<code>ol</code>) premier niveau - apparence par défaut
-	<ol>
-	<li>liste ordonnée (<code>ol</code>) deuxième niveau - apparence par défaut</li>
-	<li>liste ordonnée (<code>ol</code>) deuxième niveau - apparence par défaut
-		<ol>
-		<li>liste ordonnée (<code>ol</code>) troisième niveau - apparence par défaut</li>
-		<li>liste ordonnée (<code>ol</code>) troisième niveau - apparence par défaut</li>
-		</ol>
-	</li>
-	</ol>
-</li>
-</ol>
-
-<table>
-<caption>Légende de table - apparence par défaut</caption>
-<thead>
-<tr>
-<th scope="col">En-tête de table (<code>th</code>) - apparence par défaut</th>
-<th scope="col">En-tête de table (<code>th</code>) - apparence par défaut</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>Données de table (<code>td</code>) - apparence par défaut</td>
-<td>Données de table (<code>td</code>) - apparence par défaut</td>
-</tr>
-</tbody>
-</table>
-
-<form action="#" method="post">
-<div><label for="data1">Formulaire - Entrée - apparence par défaut&#160;:</label> <input name="data1" type="text" id="data1" /></div>
-<div><label for="data2">Formulaire - Zone texte - apparence par défaut&#160;:</label> <textarea name="data2" cols="15" rows="3" id="data2"></textarea></div>
-<div><label for="data4">Formulaire - Sélection - apparence par défaut&#160;:</label> 
-<select id="data4" name="data4">
-<option value="Option 1">Option 1</option>
-<option value="Option 2">Option 2</option>
-<option value="Option 3">Option 3</option>
-<option value="Option 4">Option 4</option>
-</select></div>
-<fieldset><legend>Formulaire - <code lang="en">legend</code>, <code lang="en">fieldset</code> et case à cocher - apparence par défaut</legend>
-<div><input name="checkbox" type="checkbox" id="data5" value="checkbox" />&#160;<label for="data5">Option 1</label>&#160;&#160;
-<input name="checkbox" type="checkbox" id="data6" value="checkbox" />&#160;<label for="data6">Option 2</label>&#160;&#160;
-<input name="checkbox" type="checkbox" id="data7" value="checkbox" />&#160;<label for="data7">Option 3</label>&#160;&#160;
-<input name="checkbox" type="checkbox" id="data8" value="checkbox" />&#160;<label for="data8">Option 4</label></div>
-</fieldset>
-<div><input name="submit" type="submit" id="submit" value="Soumettre - apparence par défaut" />
-<input name="reset" type="reset" id="reset" value="Réinitialiser - apparence par défaut" /></div>
-</form>
-
-<blockquote>
-<p>&quot;Blockquote - apparence par défaut&quot;.</p>
-</blockquote>
-<!-- EndEditableContent -->
-<dl id="gcwu-date-mod" role="contentinfo">
-<dt>Date de modification&#160;:</dt><dd><span><time><!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'--></time></span></dd>
-</dl>
-<div class="clear"></div>
-<!-- MainContentEnd -->
-</div></div>
+				<h1 id="cont">
+					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
+					Cale s&egrave;che d'Esquimalt &ndash; Bienvenue
+					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
+				</h1>
+				<div class="main1"><img src="images/dock-cale.jpg" alt="" width="388" height="250" style="width: 388px; height: 250px;" />
+					
+					<p>La Cale s&egrave;che d'Esquimalt (CSE) est la plus importante forme de radoub commerciale de la c&ocirc;te Ouest des Am&eacute;riques. Nous sommes <a href="emp-loc-fra.html">situ&eacute;s</a> dans un port ouvert &agrave; l'ann&eacute;e longue, sur l'&icirc;le de Vancouver, &agrave; proximit&eacute; des voies d'acc&egrave;s
+&agrave; l'Alaska et aux pays riverains du Pacifique. </p>
+					<p>Nos installations de calibre mondial sont &eacute;quip&eacute;es notamment de logements pour stabilisateurs et d'appareils de levage haute vitesse pour charges lourdes (capacit&eacute; de 150-165&nbsp;tonnes). La cale s&egrave;che peut recevoir des navires de 100&nbsp;000&nbsp;<acronym title="Tonnes de port en lourd">TPL</acronym>, soit environ 90&nbsp;% des navires du monde.</p>
+					<p>La <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym> <a href="https://cse-egd.tpsgc-pwgsc.gc.ca/reserve-book-fra.cfm">offre des services de r&eacute;paration et d'entretien naval aux entreprises commerciales et aux particuliers</a>, sur commande (premier arriv&eacute;, premier servi). Tout le travail est assur&eacute; par des <a href="entreprises-firms-fra.html">entreprises de r&eacute;paration navale</a> du secteur priv&eacute;.</p>
+				</div>
+				<div class="option2">
+					<h2>Qui sommes-nous?</h2>
+					<p>La <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym> est une division du minist&egrave;re f&eacute;d&eacute;ral des
+						Travaux publics et des Services gouvernementaux du Canada (TPSGC).</p>
+					<p>Les services de r&eacute;paration de navires sont assur&eacute;s 24&nbsp;heures
+						sur 24,&nbsp;7&nbsp;jours sur 7&nbsp;et 365&nbsp;jours par ann&eacute;e. Nous proposons toute
+						la gamme des services de r&eacute;paration
+						navale, avec tous les &eacute;quipements requis, notamment nos nouveaux logements
+						pour stabilisateurs facilitant les travaux d'entretien et de r&eacute;paration
+						des dispositifs de stabilisation des navires. </p>
+				</div>
+				<div class="option2">
+					<h2>Services offerts</h2>
+					<p>La <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym> est tr&egrave;s appr&eacute;ci&eacute;e des propri&eacute;taires
+						de navires pour leurs travaux de r&eacute;paration et d'entretien&nbsp;:</p>
+					<ul>
+						<li>Paquebots de croisi&egrave;re;</li>
+						<li>Navires vraquiers et navires de transport de marchandises diverses
+							desservant l'Alaska et les pays riverains du Pacifique;</li>
+						<li> Navires canadiens &ndash; en particulier ceux du minist&egrave;re de la
+							D&eacute;fense nationale et de la British Columbia Ferry Corporation. </li>
+					</ul>
+					<p>Gr&acirc;ce &agrave; notre <a href="env/programme-program-fra.html">syst&egrave;me
+							de gestion environnementale homologu&eacute; <acronym title="Organisation internationale de normailisation">ISO</acronym>&nbsp;14001</a>, nos travaux
+							sont ex&eacute;cut&eacute;s
+							dans le respect de l'environnement. Nous sommes l'un
+							des trois chantiers de r&eacute;paration navale multi-usagers au monde &agrave; poss&eacute;der
+							cette homologation.</p>
+				</div>
+			</div></div>
 
 <div id="wb-sec"><div id="wb-sec-in">
 <!--#include virtual="/pac/cse-egd/includes/nav_gauche-nav_left-fra.html" -->
